Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.16

* Changes in <head> element for non-Latin characters, HTML invoices (Erik H)
* Corrected untranslated string in Contact management screen (Chris T)
* Corrected permissions issue creating pricelist (Chris T, 3513861)
* Correcting ordering of aging reports so currencies are clustered (Chris T)

Changelog for 1.3.15
* Update WX POS (almost there) - readme and code  (Andres B, item 3516949)
* Adding Perl-based database-setup and teardown scripts (Chris B)
* Corrected build issues w/Makefile due to inclusion of LedgerSMB.pm (Chris T)
* ledgersmb.conf.default : Update default PATH (H Sorli, item 3430019)
* Fixed imballanced payments when early payment discount processed (Chris T)
* Pricelists exportable as PDF and CSV (Chris T)
* Fixed payment/receipts shows with 0 due/payment list (Erik H, bug 3512555)
* Correct POD spelling error in LedgerSMB/Form.pm (Robert C, bug 3472015)
* Fixed Reconciliation.sql not loading (Erik H)

Andres B is Andres Basile
Chris B is Chris Bennet
Chris T is Chris Travers
H Sorli is Havard Sorli
Robert C is Robert James Clay

Changelog for 1.3.14
* Argentina (Spanish) translation and charts of accounts added. (Andres B)
* Fixed errors saving when duedate is blank, bug 3503463 (Chris T)
* Corrected editing pos_invoice.txt whitelisting in front-end (Chris T)
* Corrected erroneous directory transversal denial (Chris T, bug 3504924)
* Added recon data to Norwegian chart of accounts (h/t H. Sorli) (Chris T)
* Fixed some menu items disappearing after upgrade (Chris T, bug 3504934)
* Added default to country for initial setup (Chris T, bug 3496967)
* Added recon data to COA files for a few extra locales (Chris T bug 3505102)
* Clarified error message when contrib scripts not found (Chris T)
* Corrected warnings for missin glog initalization (Andres B)
* XLS and ODS buttons are now disabled if prereqs are missing (Erik H)