@@ -8,6 +8,7 @@ Changelog for 1.3.16
 * Corrected untranslated string in Contact management screen (Chris T)
 * Corrected permissions issue creating pricelist (Chris T, 3513861)
 * Correcting ordering of aging reports so currencies are clustered (Chris T)
+* Fixed curr totals not showing for aging rpts (Chris T, 3512591, h/t John L)
 
 Changelog for 1.3.15
 * Update WX POS (almost there) - readme and code  (Andres B, item 3516949)
